--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,96 @@
-*, input, select, h1 {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+*,
+input,
+select,
+h1 {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Roboto", sans-serif;
 }
 
 body {
-  background-color: #ffffd1;
-  display: flex;
+	background-color: #ffffd1;
+	display: flex;
 }
 
 .wrapper {
-  margin: auto;
-  margin-top: 2rem;
-  /* border: 2px solid #939aa1; */
+	margin: auto;
+	margin-top: 2rem;
+	/* border: 2px solid #939aa1; */
 }
 
 .title {
-  font-size: 1.8rem;
-  font-weight: 500;
-  width: 100%;
-  text-align: center;
-  padding-top: 1rem;
-  color: #939aa1;
-  /* margin-bottom: 1rem; */
+	font-size: 1.8rem;
+	font-weight: 500;
+	width: 100%;
+	text-align: center;
+	padding-top: 1rem;
+	color: #939aa1;
+	/* margin-bottom: 1rem; */
 }
 
 .conversor-wrapper {
-  padding: 1rem;
-  display: flex;
-  gap: 1rem;
+	padding: 1rem;
+	display: flex;
+	gap: 1rem;
 }
 
 .measure {
-  display: flex;
-  width: 100%;
-  max-width: 200px;
-  display: inline-block;
+	display: flex;
+	width: 100%;
+	max-width: 200px;
+	display: inline-block;
 }
 
-.input, .select {
-  width: 100%;
-  height: 2.5rem;
-  text-align: center;
-  font-size: 1rem;
+.input,
+.select {
+	width: 100%;
+	height: 2.5rem;
+	text-align: center;
+	font-size: 1rem;
 }
 
 .input {
-  font-weight: 600;
-  border-radius: 1rem;
-  margin-bottom: 0.5rem;
-  outline: none;
-  border: 1px solid #ccc;
+	font-weight: 600;
+	border-radius: 1rem;
+	margin-bottom: 0.5rem;
+	outline: none;
+	border: 1px solid #ccc;
 }
 
 .input:read-only {
-  cursor: not-allowed;
+	/* cursor: not-allowed; */
 }
 
 .select {
-  border-radius: 1rem;
-  border: 1px solid #ccc;
+	border-radius: 1rem;
+	border: 1px solid #ccc;
 }
 
 .select > option {
-  border-radius: 1rem;
-  border: 1px solid #ccc;
+	border-radius: 1rem;
+	border: 1px solid #ccc;
 }
 
 .select > option:hover {
-  background-color: aqua;
+	background-color: aqua;
+}
+
+.message {
+	text-align: center;
+	color: #000;
+	background-color: #fff;
+	border-radius: 2rem;
+	border: 1px solid #ccc;
+	padding: 0.25rem 0.125rem;
+	width: 100%;
+	max-width: 200px;
+	font-size: 0.7rem;
+  opacity: 0;
+  pointer-events: none;
+  transition: all ease-in 0.3s;
+}
+.message.show {
+  opacity: 1;
+  pointer-events: all;
 }
